Use Android’s Base64 implementation